@@ -10,11 +10,13 @@ class ClientTest < TinyTds::TestCase
     
     should 'not be closed' do
       assert !@client.closed?
+      assert @client.active?
     end
     
     should 'allow client connection to be closed' do
       assert @client.close
       assert @client.closed?
+      assert !@client.active?
       action = lambda { @client.execute('SELECT 1 as [one]').each }
       assert_raise_tinytds_error(action) do |e|
         assert_match %r{closed connection}i, e.message, 'ignore if non-english test run'
